--- a/src/elements/guuey-custom-text-input/dependencies.html
+++ b/src/elements/guuey-custom-text-input/dependencies.html
@@ -6,3 +6,4 @@
 <link rel="import" href="../../../bower_components/paper-button/paper-button.html" />
 <link rel="import" href="../../../bower_components/app-layout/app-grid/app-grid-style.html" />
 <link rel="import" href="../../../bower_components/iron-media-query/iron-media-query.html" />
+<link rel="import" href="../../../bower_components/app-storage/app-indexeddb-mirror/app-indexeddb-mirror.html" />
