--- a/src/pages/care-plan/su-pre/dependencies.html
+++ b/src/pages/care-plan/su-pre/dependencies.html
@@ -1,12 +1,13 @@
 <link rel="import" href="../../../../bower_components/polymer/polymer.html" />
-<link rel="import" href="../../../elements/guuey-text-input/guuey-text-input.html" />
-<link rel="import" href="../../../elements/guuey-custom-text-input/guuey-custom-text-input.html" />
 <link rel="import" href="../../../../bower_components/polymerfire/firebase-document.html" />
 <link rel="import" href="../../../../bower_components/polymerfire/firebase-query.html" />
 <link rel="import" href="../../../../bower_components/paper-fab/paper-fab.html" />
 <link rel="import" href="../../../../bower_components/paper-dialog/paper-dialog.html" />
 <link rel="import" href="../../../../bower_components/paper-input/paper-input.html" />
 <link rel="import" href="../../../../bower_components/paper-card/paper-card.html" />
-<link rel="import" href="../../../elements/su-header/su-header.html" />
 <link rel="import" href="../../../../bower_components/app-layout/app-grid/app-grid-style.html" />
 <link rel="import" href="../../../../bower_components/iron-media-query/iron-media-query.html" />
+<link rel="import" href="../../../../bower_components/app-storage/app-indexeddb-mirror/app-indexeddb-mirror.html" />
+<link rel="import" href="../../../elements/su-header/su-header.html" />
+<link rel="import" href="../../../elements/guuey-text-input/guuey-text-input.html" />
+<link rel="import" href="../../../elements/guuey-custom-text-input/guuey-custom-text-input.html" />
