--- a/src/elements/su-header/su-header.html
+++ b/src/elements/su-header/su-header.html
@@ -157,10 +157,6 @@ setimage(boolean)
         width:100%;
         height:150px;
         height:var(--header-image-height);
-
-        background-image:url(../../../images/defaultAvatar.png);
-        background-repeat:no-repeat;
-        background-size:cover;
       }
     </style>
 
@@ -170,6 +166,7 @@ setimage(boolean)
         <iron-image
           class="headerProfileImage"
           sizing="cover"
+          placeholder="../../../images/defaultAvatar.png"
           preload
           fade
           src="[[suIndexData.image]]">
